// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the generated schema detects invalid inputs as invalid (0) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "errors": Array [
        "Missing required field.",
      ],
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (1) 1`] = `
Processed {
  "nested": Object {
    "a": Processed {
      "errors": Array [
        "Missing required field.",
      ],
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (2) 1`] = `Processed {}`;

exports[`the generated schema detects invalid inputs as invalid (3) 1`] = `Processed {}`;

exports[`the generated schema detects invalid inputs as invalid (4) 1`] = `
Processed {
  "nested": Object {
    "bs": Processed {
      "errors": Array [
        "Not an array.",
      ],
    },
  },
}
`;

exports[`the generated schema detects invalid inputs as invalid (5) 1`] = `Processed {}`;
